# pynes

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  continuous-build.yml  release.yml
docs/performance/: performance-report.md
docs/releases/: index.md  v0.0.1.md  v0.0.2.md  v0.0.3.md  v0.0.4.md  v0.0.5.md  v0.0.6.md  v0.0.7.md  v1.0.0.md  v1.0.1.md  v1.0.2.md  v1.0.3.md
scripts/: build_metadata.py  build_standalone.py  generate_build_metadata.py  generate_changelog.py  generate_release_notes.py  nes_py_launcher.py  profile_performance.py
src/nes_py/: __init__.py  __main__.py  app.py  apu.py  cartridge.py  cli.py  cpu.py  debug.py  input.py  logging_config.py  nes.py  ppu.py  settings.py  version.py
tests/: __init__.py  test_app.py  test_apu.py  test_build_scripts.py  test_cartridge.py  test_cli.py  test_cpu.py  test_debug.py  test_direct_script.py  test_nes.py  test_ppu.py  test_release_docs.py  test_standalone_build.py  test_version.py
