[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pynes"
version = "1.0.3"
description = "A Python NES emulator project."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "sgalvez" }
]
keywords = ["nes", "emulator", "python"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
display = [
  "pygame>=2.6",
]
standalone = [
  "pygame>=2.6",
  "pyinstaller>=6.0",
]
dev = [
  "build>=1.2",
  "pygame>=2.6",
  "pytest>=8.0",
  "ruff>=0.8",
]

[project.scripts]
nes-py = "nes_py.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]
